--- a/tracfullblog/templates/fullblog_view.html
+++ b/tracfullblog/templates/fullblog_view.html
@@ -3,9 +3,16 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
-      xmlns:xi="http://www.w3.org/2001/XInclude">
+      xmlns:xi="http://www.w3.org/2001/XInclude"
+      xmlns:i18n="http://genshi.edgewall.org/i18n"
+      i18n:domain="tracfullblog">
   <xi:include href="layout.html" />
   <xi:include href="macros.html"><xi:fallback /></xi:include>
+
+  <?python
+    from tracfullblog.core import _
+  ?>
+
   <head>
     <title>Blog${defined('blog_post') and ': ' + blog_post.title \
                 or req.args.get('blog_path') and defined('blog_list_title') \
@@ -116,7 +123,7 @@
                     </fieldset>
                   </div>
                   <div class="field">
-                    <label for="comment">Comment (you may use
+                    <label for="comment" i18n:msg="">Comment (you may use
                       <a tabindex="42" href="${href.wiki('WikiFormatting')}">WikiFormatting</a>
                       here):
                     </label><br />
@@ -136,11 +143,11 @@
                                  or req.authname}" />
                 </div>
                 <div class="buttons">
-                  <input type="submit" name="previewcomment" value="Preview comment" />
+                  <input type="submit" name="previewcomment" value="${_('Preview comment')}" />
                   <input size="30" type='submit' name="submitcomment"
-                      value="Add comment" />
+                      value="${_('Add comment')}" />
                   <input type="hidden" name="action" value="comment" />
-                  <input type="submit" name="cancelcomment" value="Cancel" />
+                  <input type="submit" name="cancelcomment" value="${_('Cancel')}" />
                 </div>
                 <script type="text/javascript" src="${chrome.htdocs_location}js/wikitoolbar.js" />
               </fieldset>
